--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
+
+html, body, #root {
+    font-family: 'Sora', sans-serif;
+    background-image: url("https://images.unsplash.com/photo-1519422073259-4a67b15ea2e6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80");
+    background-size: cover;
+    background-position: center;
+    color: black;
+    height: 100vh;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;}
+
+.search {
+    outline: none;
+    padding: 20px 5%;
+    border-radius: 20px;
+    border: none;
+    margin-bottom: 5%;
+    background: rgba(250, 250, 250, 0.85);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.city {
+    margin: 1em;
+    width: 230px;
+    height: 285px;
+    padding: 1.5em;
+    border-radius: 30px;
+    background:rgba(255, 255, 255, 0.5);
+    box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p {
+    margin-top: 10px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
 }
 
-.App-link {
-  color: #61dafb;
+.city-temp {
+    font-size: 1.5rem;
+    font-weight: bold;
+    position: relative;
+    color: black;
+    top: -50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.city-temp sup {
+    padding: 0.1em 0.3em;
+    margin-left: 0.2em;
+    border-radius: 20px;
+    color: black;
+    background: white;
+}
+
+.city sup {
+    font-size: 0.5em;
+}
+
+.city-name {
+    font-size: 1.5em;
+    position: relative;
+    top: -30px;
+}
+
+.city-name sup {
+    padding: 0.1em 0.5em;
+    margin-left: 0.2em;
+    border-radius: 20px;
+    color: black;
+    background: white;
+}
+
+.city-icon {
+    margin-top: 10px;
+    width: 100px;
+    height: 100px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: -90px;
+}
+ .weather-info {
+     font: initial 14px 'Sora', sans-serif;
+     font-weight: bolder;
+     position:relative;
+     top: -100px;
+ }
+.wind-speed {
+    font: 14px 'Sora', sans-serif;
+    position: relative;
+    top: -110px;
+}
+
+.wind-speed sup {
+    padding: 0.2em 0.8em;
+    margin-left: 0.2em;
+    border-radius: 30px;
+    color: black;
+    background: white;
+}
+
+.humidity-value {
+    font-size: 0.9em;
+    position: relative;
+    top: -110px;
+}
+
+.humidity-value sup {
+    padding: 0.2em 0.8em;
+    margin-left: 0.2em;
+    border-radius: 30px;
+    color: black;
+    background: white;
+}
+
+.logo {
+    margin-bottom: -20px;
+    margin-left: -12px;
+    position: relative;
+    top: -80px;
 }
